[package]
name = "payment_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1"
mockall = "0.11.4" 
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = { version = "1", features = ["derive", "serde_derive"] }
strum = "0.26"
strum_macros = "0.26"
