[package]
name = "trust-machines"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.41.0"
dotenv = "0.15"
reqwest = { version = "0.12.5", features = ["json"] }
rstest = { version = "0.16.0", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1" , features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde_json = { version = "1"}
uuid = { version = "1", features = ["serde", "v4"] }
